// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<BitbucketProjectCreateRenderer
  bitbucketSetting={
    Object {
      "alm": "bitbucket",
      "key": "foo",
    }
  }
  canAdmin={false}
  importing={false}
  loading={false}
  onImportRepository={[Function]}
  onPersonalAccessTokenCreated={[Function]}
  onSearch={[Function]}
  onSelectRepository={[Function]}
  resetPat={false}
  searching={false}
  showPersonalAccessTokenForm={true}
/>
`;

exports[`should render correctly: No repository 1`] = `
<BitbucketProjectCreateRenderer
  bitbucketSetting={
    Object {
      "alm": "bitbucket",
      "key": "foo",
    }
  }
  canAdmin={false}
  importing={false}
  loading={false}
  onImportRepository={[Function]}
  onPersonalAccessTokenCreated={[Function]}
  onSearch={[Function]}
  onSelectRepository={[Function]}
  projects={
    Array [
      Object {
        "id": 1,
        "key": "project1",
        "name": "Project 1",
      },
      Object {
        "id": 2,
        "key": "project2",
        "name": "Project",
      },
    ]
  }
  resetPat={false}
  searching={false}
  showPersonalAccessTokenForm={false}
/>
`;

exports[`should render correctly: No setting 1`] = `
<BitbucketProjectCreateRenderer
  canAdmin={false}
  importing={false}
  loading={false}
  onImportRepository={[Function]}
  onPersonalAccessTokenCreated={[Function]}
  onSearch={[Function]}
  onSelectRepository={[Function]}
  resetPat={false}
  searching={false}
  showPersonalAccessTokenForm={true}
/>
`;
